Fri Oct 17 00:33:55 GMT 2014  Olly Betts <olly@survex.com>

	* api/queryinternal.cc,matcher/: Split NearPostList out into separate
	  source file and header.

Wed Oct 15 04:33:31 GMT 2014  Olly Betts <olly@survex.com>

	* api/queryinternal.cc,matcher/exactphrasepostlist.cc: We never try to
	  build an ExactPhrasePostList over 0 or 1 terms, so simply assert we
	  don't, rather than having an explicit check for it in the code.

Tue Oct 14 02:47:02 GMT 2014  Olly Betts <olly@survex.com>

	* matcher/phrasepostlist.cc,tests/api_backend.cc: If the anchor term
	  for a phrase is the first or last, set the min or max to its
	  position respectively.  Fixes the testcase in #657, but may not be
	  a complete fix.

Sun Oct 12 12:03:10 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Update.

Fri Oct 10 10:53:38 GMT 2014  Olly Betts <olly@survex.com>

	* backends/chert/chert_btreebase.cc,backends/chert/chert_table.cc: The
	  table is sync-ed after the base file, so it's the last table we want
	  to full-sync, not the last base file.

Thu Oct 09 02:39:00 GMT 2014  Olly Betts <olly@survex.com>

	* common/debuglog.h: Suppress unused typedef warnings from debugging
	  logging macros, which occur in functions which always exit via
	  throwing an exception.

Thu Oct 09 01:45:00 GMT 2014  Olly Betts <olly@survex.com>

	* tests/harness/fdtracker.cc: Fix code typo in recent change to skip
	  apparent leaks of /dev/urandom.

Thu Oct 09 01:43:02 GMT 2014  Olly Betts <olly@survex.com>

	* common/pretty.h: Fix debug logging code to compile with clang.
	  (fixes #657, reported by Germán M. Bravo)

Wed Oct 08 04:43:05 GMT 2014  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: If an empty RSet is specified, just handle it
	  as if no RSet were specified.

Mon Oct 06 21:41:58 GMT 2014  Olly Betts <olly@survex.com>

	* tests/Makefile.am: Remove .replicatmp upon "make clean".

Fri Sep 19 05:31:15 GMT 2014  Olly Betts <olly@survex.com>
